--- a/style.css
+++ b/style.css
@@ -16,27 +16,30 @@ a {
   color: inherit;
 }
 
-/* Header */
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 header {
   position: relative;
   color: #fff;
-
   text-align: center;
 }
-/* 
-header::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(rgba(34, 197, 94, 0.7), rgba(15, 23, 42, 0.8));
-} */
 
 .header-content {
-  padding: 90px 20px;
-  position: relative;
-  z-index: 1;
-  background: rgba(168, 149, 149, 0.05);
-  backdrop-filter: blur(5px);
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-content-left {
+  img {
+    height: 70px;
+    width: auto;
+  }
+}
+
+.header-content-right {
 }
 
 .header-background {
